--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ img {max-width: 100%;}
   background-repeat: no-repeat;
 }
 #home {
-  background-image:  url("../images/IMG_7026.jpeg");
+  background-image:  url(IMG_7026.jpeg);
   min-height: 100vh;
 }
 #home .page-title {
